maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: '=' expected but '(' found.
	def isDirectionFree:dir(dir) = {
                               ^Escaper:45: error: illegal start of simple expression
while (getY()!=0) {
^