maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	def murGauche():Boolean = {
		gauche();
		if (estFaceMur()) {
			droite();
			return true;
		}
		droite();
		return false;
	}
	var sommeAngle:Int = 0;
	def keepHandOnSideWall = {
		while (!estSurBiscuit()) {
			if (murGauche() && !estFaceMur()) {
				avance();
			}
			else if (murGauche() && estFaceMur()) {
				droite();
				sommeAngle -=1;
				if (!estFaceMur()) {
					avance();
				}
			}
			else {
				gauche();
				sommeAngle +=1;
				avance();
			}
		}
	prendBiscuit();
	}
	def isDirectionFree:dir(dir) = {
		var D=Direction.NORTH;
		setDirection(dir);
		if (!estFaceMur()) {
			return true;
		}
		else {
			setDirection(D);
			return false;
		}
	}

while (getY()!=0) {
	if (!estFaceMur()) {
		avance();
	}
	else {
		gauche();
		if (!estFaceMur()) {
			avance();
			droite();
		}
	}
}
droite();
keepHandOnSideWall;
}